src/aic-website/infrastructure/kubernetes/services/cms/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-cms
  namespace: cms
  labels:
    app: ghost-cms
    part-of: aic-website
    use-http01: "true"
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/common-name: "cms.example.com"
    cert-manager.io/duration: "2160h" # 90 days
    cert-manager.io/renew-before: "360h" # 15 days
    konghq.com/plugins: ghost-rate-limiting
spec:
  rules:
    - host: cms.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost-cms
                port:
                  name: http
  tls:
    - secretName: ghost-cms-tls
      hosts:
        - cms.example.com
